# scale-signature

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  definition.go  go.mod  go.sum  index.ts  package-lock.json  package.json  signature.go  signature.rs  signature.ts  tsconfig.json  utils.go  utils_test.go
.github/workflows/: crates.yml  golang.yml  integration-tests.yml  npm.yaml  rust-release.yml  rust.yml  typescript-release.yml  typescript.yml
.trunk/: trunk.yaml
generator/: generator.go
integration/: integration.go  integration_test.go
integration/golang_tests/: generated.go  golang_test.go  guest.go  tests_test.go  types.go
integration/rust_tests/: Cargo.toml  generated.rs  lib.rs
integration/typescript_tests/: generated.ts  index.test.ts  package-lock.json  package.json
pkg/generator/: generator.go  generator_test.go
pkg/generator/golang/: generated.txt  generator.go  generator_test.go
pkg/generator/rust/: generated.txt  generator.go  generator_test.go
pkg/generator/templates/: arrays_go.templ  enumarrays_go.templ  enummaps_go.templ  enummaps_rs.templ  enummaps_ts.templ  enums_go.templ  enums_rs.templ  enums_ts.templ  go.templ  go_boolarrays.templ  go_bools.templ  (+56 more)
pkg/schema/: bool.go  bytes.go  enum.go  float32.go  float64.go  int32.go  int64.go  model.go  numbers.go  schema.go  schema_test.go  string.go  uint32.go  uint64.go
templates/: guest.go.templ  package.go.templ  runtime.go.templ  signature.go.templ  signature.rs.templ  templates.go
templates/override/: decode.templ  overrides.go  structs.templ
(+3 files in other folders)
