[package]
name = "scale_signature"
version = "0.1.8"
edition = "2021"
description = "scale-signature public traits to be used with scale runtime"
license = "Apache-2.0"
exclude = [
    "**/*.go",
    "**/*.templ",
    "go.mod",
    "go.sum",
    "*.ts",
    "*.js",
    "*.json"
]

[lib]
path = "signature.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

