[package]
name = "scale_signature"
version = "0.2.8"
edition = "2021"
description = "The definitions and tooling required to test and consume Rust Signatures for Scale Functions."
homepage = "https://scale.sh"
repository = "https://github.com/loopholelabs/scale-signature"
license = "Apache-2.0"
exclude = [
    "**/*.go",
    "**/*.templ",
    "go.mod",
    "go.sum",
    "*.ts",
    "*.js",
    "*.json"
]

[lib]
path = "signature.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

